# VisionX

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/agrima/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/agrima/: AppGlobals.java  Extra.java  MainActivity.java  Render.java  Shade.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/raw/: fragment.glsl  vertex.glsl
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/agrima/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
